fix args.exe output dir

--- a/args.vcxproj
+++ b/args.vcxproj
@@ -78,7 +78,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <OutputFile>$(MYBIN)\args.exe</OutputFile>
+      <OutputFile>$(OutDir)args.exe</OutputFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
